--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
+        "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.9"
     },
     "require-dev": {
