--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "codexshaper/laravel-woocommerce": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
@@ -14,6 +15,7 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
+        "milon/barcode": "^10.0",
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.9"
     },
