--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "codexshaper/laravel-woocommerce": "^3.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.5",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
@@ -17,6 +17,7 @@
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
         "milon/barcode": "^10.0",
+        "mtownsend/remove-bg": "^2.0",
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.9"
     },
