--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
+        "mike42/escpos-php": "^4.0",
         "milon/barcode": "^10.0",
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.9"
